filter.js file created with working functions

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/scripts/main.js"
+            "program": "${workspaceFolder}/scripts/filter.js"
         }
     ]
 }
